# rtpvideo

./: CMakeLists.txt  LICENSE  README.md  gst-test.sh
include/: rtpvideotx.h
src/: rtpvideotx.c
testvideosend/: CMakeLists.txt  videosend.c
